--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
+amqp==2.1.4
+appdirs==1.4.3
+billiard==3.5.0.2
+celery==4.0.2
+Cerberus==1.1
+certifi==2017.4.17
+chardet==3.0.3
+falcon==1.2.0
+gunicorn==19.7.1
+idna==2.5
+kombu==4.0.2
+packaging==16.8
+psycopg2==2.6.1
+pyparsing==2.2.0
+python-mimeparse==1.6.0
+pytz==2017.2
+redis==2.10.5
+requests==2.16.5
+six==1.10.0
 SQLAlchemy==1.0.12
 SQLAlchemy-Utils==0.32.6
-psycopg2==2.6.1
+urllib3==1.21.1
+vine==1.1.3
