--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ Cerberus==1.1
 certifi==2017.4.17
 chardet==3.0.3
 falcon==1.2.0
+funcsigs==1.0.2
 gunicorn==19.7.1
 idna==2.5
 kombu==4.0.2
+mock==2.0.0
 packaging==16.8
+pbr==3.0.1
 psycopg2==2.6.1
 pyparsing==2.2.0
 python-mimeparse==1.6.0
