--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,21 @@ celery==4.0.2
 Cerberus==1.1
 certifi==2017.4.17
 chardet==3.0.3
+configparser==3.5.0
+enum34==1.1.6
 falcon==1.2.0
+flake8==3.3.0
 funcsigs==1.0.2
 gunicorn==19.7.1
 idna==2.5
 kombu==4.0.2
+mccabe==0.6.1
 mock==2.0.0
 packaging==16.8
 pbr==3.0.1
 psycopg2==2.6.1
+pycodestyle==2.3.1
+pyflakes==1.5.0
 pyparsing==2.2.0
 python-mimeparse==1.6.0
 pytz==2017.2
